# ChangeLog for app-admin/eselect-xorgconf
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  -eselect-xorgconf-0.1.ebuild, eselect-xorgconf-0.2.ebuild:
  fix depend drop old

  14 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  eselect-xorgconf-0.1.ebuild, eselect-xorgconf-0.2.ebuild:
  fix block depends

  13 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +eselect-xorgconf-0.2.ebuild:
  version bump, compat to 1.8 xorg

*eselect-xorgconf-0.2 ( 13 Apr 2010 )

  13 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  eselect-xorgconf-0.1.ebuild:
  fix depend's

  13 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  eselect-xorgconf-0.1.ebuild:
  fix homepage r.o.i #77

  04 Apr 2010; <slep@gentoo.org> eselect-xorgconf-0.1.ebuild:
  add block to 1.8 xorg

*eselect-xorgconf-0.1 ( 28 Mar 2010 )

  28 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +eselect-xorgconf-0.1.ebuild, +metadata.xml:
  initial commit, fix #311295; Tnx krigstask && Mellon
