@@ -1,4 +1,6 @@
 DIST eselect-xorgconf-0.2.tar.bz2 1212 RMD160 be3129408b3994972a44b8d1c0b2d182dd943378 SHA1 04bb4b1520a0d291a39234de5d85d1e3390b9a43 SHA256 8684099f297fbf604d8528db517d525fe81d3b7fcf071aea1daf31f371515627
+DIST eselect-xorgconf-0.3.tar.bz2 2260 RMD160 c0629e83ecbf196555ffe5c19a0f3c3f75e04a83 SHA1 99614af36acce53f9a1dae4afb4a7eae529adee3 SHA256 b0b69497d06a6e5ec855a821e8f7ece712ad57e4ad0f2f6aaf2914508ff3ea41
 EBUILD eselect-xorgconf-0.2.ebuild 703 RMD160 f15c80717e4c31956e1f51530b6469768a13b726 SHA1 2b8e444908dae8d5a052b240c906b680752b0e09 SHA256 42781cb7968bc1a431471dce05c575953bc19c8c53a7d51748d9a0bcd11f993b
-MISC ChangeLog 1050 RMD160 dc01eb1295bb7e4e35f41cfa9ead29e04669b247 SHA1 8b56c0d5bdc636bb6ab27ee56c8bb9d167e798e2 SHA256 cac88ac8c0f48dd2f5984807e23bc12f038a8b35be472758d2070c151b685211
+EBUILD eselect-xorgconf-0.3.ebuild 703 RMD160 f15c80717e4c31956e1f51530b6469768a13b726 SHA1 2b8e444908dae8d5a052b240c906b680752b0e09 SHA256 42781cb7968bc1a431471dce05c575953bc19c8c53a7d51748d9a0bcd11f993b
+MISC ChangeLog 1180 RMD160 4f2a39983af8290d7eb89f277fb0b0d3b2b2e84e SHA1 91e7896dba51af41927c5bb37ae99199dc9dca20 SHA256 85e7e2086643fc8b5a4d9e89a990f9a20cad9b2e2fc8a6786cff10695e94398e
 MISC metadata.xml 365 RMD160 691018c5ce6e2eb8d9a29c138e5a5fbc0668f323 SHA1 67a86a569a207cf63a2069a93390043436f9f4ff SHA256 d3292c889cc8b28ff8bb1634fcc64079ace9f3dd971358b659a5cd5514af2977
