@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*eselect-xorgconf-0.3 (09 Jun 2010)
+
+  09 Jun 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +eselect-xorgconf-0.3.ebuild:
+  bump
+
   14 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru>
   -eselect-xorgconf-0.1.ebuild, eselect-xorgconf-0.2.ebuild:
   fix depend drop old
